Refactor User/Appointment Services